--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -37,7 +37,6 @@
 			<a title="juno - green! super cute and cozy site with a very nice layouts for their different pages. one of the many inspirations for my site!" href="https://fuchi.neocities.org" target="_blank"><img src="!g/fuchi.jpeg"></a>
 			<a title="nico - love the index page layout and his art style is very neat. love the cat creatures" href="https://spiders.neocities.org" target="_blank"><img src="!g/spiders.gif"></a>
 			<a title="freyde - an AMAZING collection of pages dedicated to various things." href="https://amriel.neocities.org" target="_blank"><img src="!g/amriel.png"></a>
-			<a title="mimi - super nice person and my penpal!" href="https://neetelite.neocities.org/" target="_blank"><img src="!g/neet-elite.png" alt="neet-elite"></a>
 			<a title="meek - HATSUNE MIKU!" href="https://mikufan3939.neocities.org" target="_blank"><img src="!g/mikufan3939.png"></a>
 			<a title="bridget - super neat little site!! i love the layout of this one and the webmaster's art is super nice!!!" href="https://bridget.neocities.org" target="_blank"><img src="!g/bridget.gif"></a>
 			<a title="jeith - a very nostalgic site, lots of nintendo stuff! very cozy" href="https://jeith.neocities.org" target="_blank"><img src="!g/jeith.gif"></a>
@@ -271,6 +270,7 @@
 			<a title="april" href="https://april.lexiqqq.com/" target="_blank"><img src="!g/april.gif" alt="april"></a>
 			<a href="https://pixalina.neocities.org/" target="_blank"><img src="!g/pixalina.gif" alt="pixalina"></a>
 			<a href="https://dear-j.neocities.org/" target="_blank"><img src="!g/dear-j.gif" alt="juano"></a>
+			<a href="https://blog.radicaldream.land"><img src="https://i.postimg.cc/QxhG798p/dispatchblog-banner.gif"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
