--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -56,7 +56,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/music">music</a>
 			<a href="/vgs">video games</a>
 			<a href="/tv">shows</a>
-			<a title="WIP - no CSS" href="/books">books <img src="!g/pix/caution1.gif" alt="caution symbol"></a>
+			<a title="WIP - no CSS" href="/reading">books <img src="!g/pix/caution1.gif" alt="caution symbol"></a>
 			<a href="/october-movies">october movies</a>
 
 			<h3 class="misc"> misc</h3>
@@ -123,12 +123,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="/vgs/style-savvy-styling-star/">style savvy styling star</a> + <a href="/vgs/cato/index.html">cato</a> + splatoon 2</p>
+			<p><span class="hl">playing:</span> <a href="/vgs/cato/index.html">cato</a> + <a href="/vgs/splatoon-2/index.html">splatoon 2</a></p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> orange is the new black + ozumaki + dandadan</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> fashion gallery page</p>
-			<p class="date">last updated on 07.oct.24</p>
+			<p class="date">last updated on 11.oct.24</p>
 
 		</div>
 
