video game logs

--- a/doqmeat/vgs/splatoon-2/index.html
+++ b/doqmeat/vgs/splatoon-2/index.html
@@ -25,6 +25,8 @@
 		<div class="info"><b>genre/type: </b>shooter, multiplayer</div>
 
 		<h3>logs</h3>
+		<p><span class="date">13.oct.24</span> my girlfriend also has the <i>octo expansion</i> unlocked because of the online membership she has so i've been playing that recently too! i've really fucked that much with splatoon 2's story mode levels. i think i've played half of them. they are just okay. at least from what i remember. but <b>THIS?</b> the <i>octo expansion</i> has been so much FUN to play!!!! i love how its so much more than just going from point A to point B. i will say that levels are kinda crazyyyy like the ride the tower ones or protect the orbs. but i still appreciate the variety.</p>
+		<hr>
 		<p><span class="date">02.oct.24</span> been needing an Online Game Fix so i redownloaded splatoon 2 and been literally playing from the ground up cus i'm using my girlfriend's account (who has the nintendo online membership. i don't have that.) to be able to play. i dont care if it's $5 per month, i'm not paying for that shit.</p>
 		<hr>
 		<p><span class="date">14.apr.24</span> bought it around... 2021 i think... i loved this game but i think i simply just got burned out. never a ranked guy. single story mode was pretty cool but i didn't finish it either. maybe one day!</p>
