--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -64,6 +64,7 @@
 		<li><a href="https://www.w3schools.com/colors/colors_picker.asp" target="_blank">w3schools' color picker</a> - shows you the different hues, contrast, and how the color looks as a background with text!</li>
 		<li><a href="https://docs.emmet.io/cheat-sheet/" target="_blank">emmet cheat sheet</a></li>
 		<li><a href="https://timestampgenerator.com/" target="_blank">time stamp generator</a> / <a href="https://mothereff.in/html-entities" target="_blank">HTML entity encoder</a> - use these for my RSS!</li>
+		<li><a href="https://12ft.io/" target="_blank">12ft.io</a> - let's you read paywalled articles and view things without pop-ups or ads</li>
 
 		<h3>some resource pages bookmarks!</h3>
 		<li><a href="https://faegardens333.neocities.org/resources" target="_blank">faegardens333</a> / <a href="https://hekate.neocities.org" target="_blank">hekate</a> / <a href="https://nekonokuni.neocities.org/links" target="_blank">nekonokuni</a> / <a href="https://sadgrl.online/webmastery/webmaster-links" target="_blank">sadgrl.online</a> </li>
@@ -139,7 +140,7 @@
 
 		<h4 id="layouts">HTML templates</h4>
 		<a href="/notebook/F2U/templates" target="_blank">templates made by me!</a> /
-		<a href="https://neothemes.neocities.org/layouts/" target="_blank">neothemes</a> /
+		<a href="https://neothemes.neocities.org" target="_blank">neothemes</a> /
 		<a href="https://windchime.neocities.org/fountain/air/templates" target="_blank">windchime</a> / <a href="https://github.com/francelalune/neocities_layouts/tree/main" target="_blank">francelalune</a> /
 		<a title="templaterr" href="https://templaterr.neocities.org" target="_blank">templaterr</a> /
 		<a href="https://repth.neocities.org/theme" target="_blank">REPTH</a> /
@@ -386,7 +387,7 @@
 		<li><a href="https://wiiu.hacks.guide/#/" target="_blank">wiiu.hacks.guide</a> / <a href="https://wiki.agilly1989.xyz/books/wiiu" target="_blank">another guide</a> / <a href="https://wii.hacks.guide/vwii-homebrew-channel" target="_blank">vwii modding</a></li>
 
 		<h3 id="articles">articles</h3>
-		<p>articles / blog posts i think are worth reading</p>
+		<p>articles / blog posts i think are worth reading. might need <a href="https://12ft.io/" target="_blank">12ft.io</a> for some of these.</p>
 		<li><a href="https://yesterweb.org/no-to-web3/" target="_blank">say no to web3</a></li>
 		<li><a href="https://www.cs.cmu.edu/~sef/sefSmiley.htm" target="_blank">smiley :) lore</a></li>
 		<li><a href="https://randomwire.com/why-japanese-web-design-is-so-different/" target="_blank">why japanese web design is so different</a></li>
