updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -177,7 +177,9 @@
 			<a href="https://muttthecowcat.neocities.org/" target="_blank"><img src="!g/muttthecowcat.png" alt="muttthecowcat"></a>
 			<a title="galissia" href="https://galissia.neocities.org" target="_blank"><img src="!g/galissia.gif" alt="galissia"></a>
 			<a title="raezroom" href="https://raezroom.neocities.org/" target="_blank"><img src="!g/raezroom.gif" alt="raezroom"></a>
+			<a href="https://midnightsolarium.neocities.org/" target="_blank"><img src="!g/midnightsolarium.gif" alt="midnightsolarium"></a>
 		</div>
+
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
@@ -270,7 +272,8 @@
 			<a title="april" href="https://april.lexiqqq.com/" target="_blank"><img src="!g/april.gif" alt="april"></a>
 			<a href="https://pixalina.neocities.org/" target="_blank"><img src="!g/pixalina.gif" alt="pixalina"></a>
 			<a href="https://dear-j.neocities.org/" target="_blank"><img src="!g/dear-j.gif" alt="juano"></a>
-			<a href="https://blog.radicaldream.land"><img src="https://i.postimg.cc/QxhG798p/dispatchblog-banner.gif"></a>
+			<a href="https://blog.radicaldream.land" target="_blank"><img src="https://i.postimg.cc/QxhG798p/dispatchblog-banner.gif"></a>
+			<a href="https://littlecloud.neocities.org/" target="_blank"><img src="!g/littlecloud.png" alt="littlecloud"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
