--- a/doqmeat/fashion/index.html
+++ b/doqmeat/fashion/index.html
@@ -33,8 +33,8 @@
    <img class="fit-pic caption-pic" title="you will see this type of combo A LOT. i'd be nothing without my floral button up shirts." src="!g/fits/1.png" alt="floral button up, brown silk pants, black converse" tabindex="0">
    <img class="fit-pic caption-pic" title="mushrooms....." src="!g/fits/2.png" alt="button up with a mushroom pattern, olive long skirt, gay converse" tabindex="0">
    <img class="fit-pic caption-pic" title="wore this on october 1st to let everyone know it's october." src="!g/fits/3.png" alt="graphic tomie tee, black and white plaid skirt, black converse" tabindex="0">
-   <img class="fit-pic caption-pic" src="!g/fits/4.png" title="this skirt is soooo cute. i love wearing it with black biker shorts underneath" alt="white button up shirt, cream and white skirt, white adidas, black cat leg warmers">
-   <img class="fit-pic caption-pic" src="!g/fits/5.png" title="mostly wear this olive skirt with black colors. the cat leg warmers are a must" alt="tshirt with a graphic in the middle with long sleeve lace, olive skirt, black converse, cat warmers">
+   <img class="fit-pic caption-pic" src="!g/fits/4.png" title="this skirt is soooo cute. i love wearing it with black biker shorts underneath" alt="white button up shirt, cream and white skirt, white adidas, black cat leg warmers" tabindex="0">
+   <img class="fit-pic caption-pic" src="!g/fits/5.png" title="mostly wear this olive skirt with black colors. the cat leg warmers are a must" alt="tshirt with a graphic in the middle with long sleeve lace, olive skirt, black converse, cat warmers" tabindex="0">
    <img class="fit-pic" onclick="showBox('fit-6')" title="click me!" src="!g/fits/6.png" tabindex="0" alt="">
    <div id="fit-6" class="fit-box draggable">
     <span onclick="closeBox()" class="close">x</span>
@@ -46,15 +46,15 @@
     </p>
     <p>i'd honestly LOVE to dress more like this in the future. i think i look soooo handsome.</p>
    </div>
-   <img class="fit-pic caption-pic" title="nerd emoji. not sure if i should wear the sweater vest inside the pants or outside" src="!g/fits/7.png" onmouseout="this.src='!g/fits/7.png';" onmouseover="this.src='!g/fits/7.5.png';" alt="">
-   <img class="fit-pic caption-pic" title="my work outfit" src="!g/fits/8.png" alt="">
-   <img class="fit-pic caption-pic" title="i love purple!!!" src="!g/fits/9.png" alt="">
-   <img class="fit-pic caption-pic" title="bought the shirt and skirt at the same time. they were made for eachother. i love the colors on this one." src="!g/fits/10.png" alt="">
-   <img class="fit-pic caption-pic" title="a sick af shirt i found at the men's section. with my 'fancy' shoes" src="!g/fits/11.png" alt="">
-   <img class="fit-pic caption-pic" title="don't normally wear tight dresses but i still really like this one and i love how it looks with the white cardigan and shoes" src="!g/fits/12.png" alt="">
-   <img class="fit-pic caption-pic" title="love the shirt and belt combo. need to wear more rainbow stuff!" src="!g/fits/13.png" alt="">
-   <img class="fit-pic caption-pic" title="i'm giving an office look kind of vibe and i'm honestly digging it." src="!g/fits/14.png" alt="">
-   <img class="fit-pic caption-pic" title="the pants are a bit long and they drag on the floor kjsdkjfj but i still love them." src=" !g/fits/16.png" alt="">
+   <img class="fit-pic caption-pic" title="nerd emoji. not sure if i should wear the sweater vest inside the pants or outside" src="!g/fits/7.png" onmouseout="this.src='!g/fits/7.png';" onmouseover="this.src='!g/fits/7.5.png';" alt="" tabindex="0">
+   <img class="fit-pic caption-pic" title="my work outfit" src="!g/fits/8.png" alt="" tabindex="0">
+   <img class="fit-pic caption-pic" title="i love purple!!!" src="!g/fits/9.png" alt="" tabindex="0">
+   <img class="fit-pic caption-pic" title="bought the shirt and skirt at the same time. they were made for eachother. i love the colors on this one." src="!g/fits/10.png" alt="" tabindex="0">
+   <img class="fit-pic caption-pic" title="a sick af shirt i found at the men's section. with my 'fancy' shoes" src="!g/fits/11.png" alt="" tabindex="0">
+   <img class="fit-pic caption-pic" title="don't normally wear tight dresses but i still really like this one and i love how it looks with the white cardigan and shoes" src="!g/fits/12.png" alt="" tabindex="0">
+   <img class="fit-pic caption-pic" title="love the shirt and belt combo. need to wear more rainbow stuff!" src="!g/fits/13.png" alt="" tabindex="0">
+   <img class="fit-pic caption-pic" title="i'm giving an office look kind of vibe and i'm honestly digging it." src="!g/fits/14.png" alt="" tabindex="0">
+   <img class="fit-pic caption-pic" title="the pants are a bit long and they drag on the floor kjsdkjfj but i still love them." src=" !g/fits/16.png" alt="" tabindex="0">
 
    <div id="caption-box" class="fit-box">
     <span onclick="closeBox()" class="close">x</span>
