--- a/doqmeat/fashion/index.html
+++ b/doqmeat/fashion/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- coded with love by des. created on 05.oct.24 / finished and published on ??? -->
+<!-- coded with love by des. created on 05.oct.24 / finished and published on 15.oct.24 -->
 
 <!-- go back to top thing  -->
 
@@ -84,14 +84,14 @@
    <img class="fit-pic caption-pic" src="!g/misc/adidas.png">
    <img class="fit-pic caption-pic" src="!g/misc/converse.png">
    <h3>misc</h3>
-   <img class="fit-pic caption-pic" src="!g/misc/fitbit.png" alt="">
+   <img class="fit-pic caption-pic" title="my fitbit versa 2 watch... been wearing it more often now because of work." src="!g/misc/fitbit.png" alt="">
    <img class="fit-pic caption-pic" src="!g/misc/bohug.png">
    <img class="fit-pic caption-pic" src="!g/misc/honey-neck.png">
   </div>
  </main>
 
  <footer>
-  <p>last updated: <b>14.oct.24</b></p>
+  <p>last updated: <b>15.oct.24</b></p>
   <p><a href="/">go back home?</a> / <a href="/sitemap">sitemap</a></p>
   <p><b>credit:</b> insp by ollie's <a href="https://olliveen.neocities.org/fashion" target="_blank">fashion page</a></p>
  </footer>
