added fashion page link + rss

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -47,6 +47,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/journal">journal</a>
 			<a href="/microblog">microblog </a>
 			<a href="/blog">blog</a>
+			<a href="/fashion">fashion <img src="/!g/pix/new1.gif" alt=""></a>
 			<a href="/scrapbook">scrapbook</a>
 			<a href="/shrines">shrines</a>
 			<a href="/collection">collections</a>
