--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -34,6 +34,10 @@
 		<li><a href="rss.xml" target="_parent">RSS feed</a></li>
 		<ul>
 			<li><a href="/about.html" target="_parent">about</a></li>
+			<li><a href="/photobook" target="_parent">photobook</a></li>
+			<li><a href="/scrapbook" target="_parent">scrapbook</a></li>
+			<li><a href="/art" target="_parent">art</a></li>
+			<li><a href="/fashion" target="_parent">fashion</a></li>
 			<li><b>writings</b></li>
 			<ul>
 				↳
@@ -108,9 +112,6 @@
 				↳
 				<a href="/music/listening-log" target="_parent">music</a>
 			</ul>
-			<li><a href="/art" target="_parent">art</a></li>
-			<li><a href="/photobook" target="_parent">photobook</a></li>
-			<li><a href="/scrapbook" target="_parent">scrapbook</a></li>
 			<li><a href="/projects">projects</a></li>
 			<ul>
 				↳
