added some alt text to imgs

--- a/doqmeat/fashion/index.html
+++ b/doqmeat/fashion/index.html
@@ -81,12 +81,12 @@
    <img src="!g/earrings/6.png" alt="" class="fit-pic caption-pic">
    <img src="!g/earrings/7.png" alt="" class="fit-pic caption-pic">
    <h3>shoes</h3>
-   <img class="fit-pic caption-pic" src="!g/misc/adidas.png">
-   <img class="fit-pic caption-pic" src="!g/misc/converse.png">
+   <img class="fit-pic caption-pic" src="!g/misc/adidas.png" alt="all white adidas">
+   <img class="fit-pic caption-pic" src="!g/misc/converse.png" alt="classic black converse">
    <h3>misc</h3>
-   <img class="fit-pic caption-pic" title="my fitbit versa 2 watch... been wearing it more often now because of work." src="!g/misc/fitbit.png" alt="">
-   <img class="fit-pic caption-pic" src="!g/misc/bohug.png">
-   <img class="fit-pic caption-pic" src="!g/misc/honey-neck.png">
+   <img class="fit-pic caption-pic" title="my fitbit versa 2 watch... been wearing it more often now because of work." src="!g/misc/fitbit.png" alt="fitbit versa 2 watch">
+   <img class="fit-pic caption-pic" src="!g/misc/bohug.png" alt="bohug hat">
+   <img class="fit-pic caption-pic" src="!g/misc/honey-neck.png" alt="bohug hat">
   </div>
  </main>
 
