minor homepage update

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -89,15 +89,13 @@ feel free to look around for any help you need :) just don't be THAT person and 
 				project of mine about self expression. welcome to my internet home!</p>
 			<h4>quick notes about site:</h4>
 			<ul>
-				<li>uses javascript and iframes. for fun stuff.</li>
+				<li>uses javascript and iframes. for fun stuff and site functionality.</li>
 				<li>there is <u>no</u> explicit content on my site but keep in mind it is made by an adult with an adult
 					audience in mind.</li>
-				<li>i try to make most of my pages responsive to different screen sizes, though the intended viewing
-					size is 1080px.</li>
-				<li>i update my site a lot. hit that CTRL + F5 is something looks wonky. if that doesn't fix it feel
+				<li>i try to make most of my pages responsive to different screen sizes and mobile, though the <b>intended viewing size is 1080px on desktop</b>.</li>
+				<li>i update my site a lot. hit that CTRL + F5 if something looks wonky. if that doesn't fix it feel
 					free to e-mail me.</li>
-				<li>yes, my domain is a reference to fallout's <a title="fallout wiki" href="https://fallout.wiki/wiki/Dogmeat" target="_blank">dogmeat</a>! despite being a huge cat
-					person, i love that dog.</li>
+				<li>yes, my domain is a reference to fallout's <a title="fallout wiki" href="https://fallout.wiki/wiki/Dogmeat" target="_blank">dogmeat</a>! despite being a huge cat person, i love that dog.</li>
 			</ul>
 		</div>
 
@@ -124,18 +122,18 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="/vgs/cato/index.html">cato</a> + <a href="/vgs/splatoon-2/index.html">splatoon 2</a></p>
+			<p><span class="hl">playing:</span> <a href="/vgs/pikmin-4/index.html">pikmin 4</a> + <a href="/vgs/splatoon-2/index.html">splatoon 2</a></p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> orange is the new black + ozumaki + dandadan</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> fashion gallery page</p>
-			<p class="date">last updated on 11.oct.24</p>
+			<p><span class="hl">working on:</span> studying for midterms</p>
+			<p class="date">last updated on 16.oct.24</p>
 
 		</div>
 
 		<div id="featured-page" class="box">
 			<h2>featured page</h2>
-			<a title="click to go to my journal!" href="/journal"><img src="!g/journal.jpg" alt="featured page" width="100%"></a>
+			<a title="click to go to my fashion page!" href="/fashion"><img src="!g/fashion.jpg" alt="featured page" width="100%"></a>
 		</div>
 
 		<div id="piclog" class="box">
