updated scrapbook + new microblog post + new doodle... and other minor changes

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -44,7 +44,7 @@
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 				<p><img title="this is me btw" src="/!g/deco/silly-cat.gif" align="left" style="margin-right:5px;" width="25%">
-					hello everyone! i go by <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> and i am <mark>the webmaster of this site!</mark> i'm 24 years old from a small island called puerto rico. i've lived here pretty much my entire life. my first language is spanish though my site is mostly in english. an online habit i guess *shrugs* pero como quiera se pueden comunicar conmigo en cualquier de los dos idiomas. i'm a little freak<sup>tm</sup> and my pronouns are he / she. i'm currently studying computer science in university! which was kickstarted in 2023 by my interest in coding as i learned more and more about maintaining a personal website.</p>
+					hello everyone! i go by <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> and i am <mark>the webmaster of this site!</mark> i'm 24 years old from a small island called puerto rico. i've lived here pretty much my entire life. my first language is spanish though my site is mostly in english. an online habit i guess *shrugs* pero como quiera se pueden comunicar conmigo en cualquiera de los dos idiomas. i'm a little freak<sup>tm</sup> and my pronouns are he / she. i'm currently studying computer science in university! which was kickstarted in 2023 by my interest in coding as i learned more and more about maintaining a personal website.</p>
 
 				<p>（*＾-＾*）this is also me -&gt; <img src="/collection/internet-graphics/!g/silly-blinkie.gif" style="max-width:100%;" alt="silly blinkie :3"></p>
 
@@ -299,7 +299,7 @@
 			<div class="wrapper-in padding list">
 				you can find me in other places like...
 				<a title="e-mail" href="mailto:doqmeat@gmail.com"><img src="/!g/pix/mail11a.gif" align="left" style="margin-right:15px;margin-top:5px;margin-left:10px;"></a>
-				<li><a title="here til the site gets inevitably nuked" href="https:/twitter.com/sepiarecord999" target="_blank">twitter</a></li>
+				<li><a title="here til the site gets inevitably nuked" href="https://twitter.com/sepiarecord999" target="_blank">twitter</a></li>
 				<li><a href="https://rateyourmusic.com/~doqmeat" target="_blank">RYM</a></li>
 				<li><a href="https://doqmeats.tumblr.com/" target="_blank">tumblr</a></li>
 				<li><a href="https://letterboxd.com/Iakitu/" target="_blank">letterboxd</a></li>
