--- a/doqmeat/art/index.html
+++ b/doqmeat/art/index.html
@@ -34,8 +34,11 @@
 			<button onclick="showWin('casio')" class="container"><img src="thumb/240520-casio.png"></button>
 			<div id="casio" class="window">
 				<img src="!g/drawings/240520-casio.jpg" width="100%">
-				<p>??.may.24 - casio from hit visual novel: if found...</p>
+				<p><b>20.may.24</b> - cassiopeia from hit visual novel: if found...</p>
 				<p>made this while bored af studying for my precalculus final.</p>
+				<hr>
+				<p><b>18.oct.24</b> - scanned it and colored it digitally bc i hadn't opened CSP in a while and i miss using it.</p>
+				<img src="!g/drawings/241016-cassiopeia.png" width="100%" alt="cassiopeia but colored">
 			</div>
 
 			<button onclick="showWin('halo2')" class="container"><img src="thumb/221201-halo2.png"></button>
@@ -189,7 +192,7 @@
 
 		</div>
 		<footer>
-			<b>last updated on 03.jul.24</b>
+			<b>last updated on 18.oct.24</b>
 			<br>
 			<b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: gaegu, bangalore, pencil case pixel from <a href="http://whimsical.heartette.net/" target="_blank">whimsical</a>
 			<br>
