--- a/doqmeat/projects/index.html
+++ b/doqmeat/projects/index.html
@@ -33,7 +33,7 @@
 				<li><a href="/notebook/F2U/codes.html">HTML templates</a> - templates i've coded that are free to use. <small>i also have a <b>TON</b> of resources how to get started coding websites on my <a href="https://doqmeat.com/notebook/links#c" target="_blank">site's links</a>!</small></li>
 				<ul>
 					<li><b>notebook</b> - <a href="/notebook/F2U/preview/notebook" target="_blank">live preview</a> / <a href="https://github.com/doqmeat/F2U-html-templates/blob/main/notebook.html" target="_blank">github code</a> / <a href="https://codepen.io/doqmeat/pen/PoXjwPy" target="_blank">codepen code</a></li>
-					<li><b>yukika passport</b> - <a href="https://doqmeat.github.io/HTML-templates/yukika/" target="_blank">live preview</a> / <a href="https://github.com/doqmeat/HTML-templates/tree/main/yukika" target="_blank">github</a></li>
+					<li><b>yukika passport</b> - <a href="https://doqmeat.github.io/HTML-templates/yukika/" target="_blank">live preview</a> / <a href="https://github.com/doqmeat/HTML-templates/tree/main/yukika" target="_blank">github code</a> / <a href="https://download-directory.github.io/?url=https%3A%2F%2Fgithub.com%2Fdoqmeat%2FHTML-templates%2Ftree%2Fmain%2Fyukika" target="_blank">download</a></li>
 				</ul>
 			</ul>
 
@@ -48,7 +48,7 @@
 		<footer>
 			<p>....... <a title="go back home" href="/">ᓚᘏᗢ</a> .......</p>
 			<p> &hearts; all made with love by des &hearts;</p>
-			<p><b>credit</b>: fonts used: <a href="https://www.dafont.com/bm-neco.font" target="_blank">bm-neko</a>, <a href="https://fonts.google.com/specimen/Gaegu" target="_blank">gaegu</a>, power from fujimoto's <i>chainsaw man</i></p>
+			<p><b>credit</b>: <a href="/notebook/links/fonts.html">fonts</a> used: bm-neko, mononoki, power pagedoll from fujimoto's <i>chainsaw man</i></p>
 		</footer>
 	</main>
 </body>
