--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -21,7 +21,7 @@
 		<button onclick="toggleclick('info')" class="x hide">x</button>
 		<p>des' microblog. made for smaller thoughts i want to share.</p>
 
-		<p><b>credit:</b> body bg from <a href="https://unsplash.com/@quinoal?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Quino Al</a> on <a href="https://unsplash.com/photos/body-of-water-and-seashore-JFeOy62yjXk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> / <a href="https://archive.org/details/WindowsXPExtractedIcons" target="_blank">windows XP icons</a></p>
+		<p><b>credit:</b> body bg from <a href="https://unsplash.com/@quinoal?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Quino Al</a> on <a href="https://unsplash.com/photos/body-of-water-and-seashore-JFeOy62yjXk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a> / <a href="https://archive.org/details/WindowsXPExtractedIcons" target="_blank">windows XP icons</a> / <a href="/notebook/links/fonts.html">font</a> used is mononoki</p>
 
 		<p class="show"><a href="/">go back home?</a></p>
 	</div>
@@ -35,6 +35,9 @@
 				<p><b></b> </p>
 			</article> -->
 			<article>
+				<p><b>18.oct.24 - 1pm</b> it makes me feel like a genius whenever i use whatever i've learned for python in my compsci class and apply it to my site's javascript.</p>
+			</article>
+			<article>
 				<p><b>09.oct.24 - 11am</b> still waiting for <i>look back</i> to get screenings in my theater... but other than that, i've been doing just fine! not much happening atm. i've been working on my fashion page and i love how it's looking so far! here's a sneak peek <button onclick="showPic('!g/241009-fashion.jpg','fashion page preview', 'need to take pics of my fav items and accesories')">241009-fashion.jpg</button></p>
 			</article>
 			<article id="240914">
@@ -47,7 +50,7 @@
 				<p><b>08.sep.24 - 12am</b> me and my mom always find a way to talk about my grandma. we joke about the things she would say to us if she was still here. we really miss her. i really miss her.</p>
 			</article>
 			<article>
-				<p><b>06.sep.24 - 2pm</b> i'm so excited to play <a href="/vgs/cato/index.html">cato</a> !!! <button onclick="showPic('!g/240906-cato.png','cato downloading on steam','ive already played 2 demos for this games and i loved them so much! im super hyped')">240906-cato.png'</button></p>
+				<p><b>06.sep.24 - 2pm</b> i'm so excited to play <a href="/vgs/cato/index.html">cato</a> !!! <button onclick="showPic('!g/240906-cato.png','cato downloading on steam','ive already played 2 demos for this games and i loved them so much! im super hyped')">240906-cato.png</button></p>
 			</article>
 
 			<article id="240906">
