--- a/doqmeat/collection/plushies/index.html
+++ b/doqmeat/collection/plushies/index.html
@@ -43,7 +43,7 @@
 				</div>
 				<div class="desc">
 					<h2>ralsei</h2>
-					<p>given to me as a christmas gift from my boyfriend!</p>
+					<p>given to me as a christmas gift from my girlfriend!</p>
 					<p>ralsei is my favorite character from deltarune so i love this plushie a lot!</p>
 					<p>it's so adorable.</p>
 					<p><b>brand:</b> fangamer</p>
@@ -80,7 +80,7 @@
 				</div>
 				<div class="desc">
 					<h2>sealie</h2>
-					<p>gift from my boyfriend when he visited sea world.</p>
+					<p>gift from my girlfriend when he visited sea world.</p>
 					<p>seal + silly = sealie</p>
 				</div>
 			</div>
@@ -214,7 +214,7 @@
 				<div class="desc">
 					<h2>mushroom</h2>
 					<p>i think his name is <b>pedro</b>.</p>
-					<p>a present from my boyfriend :3 i love mushrooms. also his head is so fucking big.</p>
+					<p>a present from my girlfriend :3 i love mushrooms. also his head is so fucking big.</p>
 				</div>
 			</div>
 
