--- a/doqmeat/october-movies/index.html
+++ b/doqmeat/october-movies/index.html
@@ -16,8 +16,8 @@ https://coolors.co/ffba71-bea8d2-9b6ccd
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script>
-		(function($) {
-			$(document).ready(function() {
+		(function ($) {
+			$(document).ready(function () {
 				$("[title]").style_my_tooltips({
 					tip_follows_cursor: true,
 					tip_delay_time: 10,
@@ -65,7 +65,7 @@ https://coolors.co/ffba71-bea8d2-9b6ccd
 		<details>
 			<summary><i>noroi: the curse</i> (2005)</summary>
 			<br>
-			thank god i watched this one with my boyfriend because man was i pretty damn lost throughout this one <img src="/!g/pix/catscared.gif"> i had watched another movie from the same director called <i>occult</i> and it pretty much had the same type of "goofiness" to it. but i kinda couldn't invest myself into this one has much as i did with <i>occult</i>. it's a very interesting watch for sure! but if you'd like to experience a koji shiraishi film i'd def recommend the latter rather than this one.
+			thank god i watched this one with my girlfriend because man was i pretty damn lost throughout this one <img src="/!g/pix/catscared.gif"> i had watched another movie from the same director called <i>occult</i> and it pretty much had the same type of "goofiness" to it. but i kinda couldn't invest myself into this one has much as i did with <i>occult</i>. it's a very interesting watch for sure! but if you'd like to experience a koji shiraishi film i'd def recommend the latter rather than this one.
 			<p class="date-watched">watched on october 3</p>
 		</details>
 		<details>
