--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -76,7 +76,7 @@ coded with love by des
 				<img src="!g/231227-florida%20(17).jpg">
 				<div class="hov">
 					<div class="caption">
-						from my florida trip with my boyfriend :D we went to disney, bush gardens, sea world, and universal.<br>
+						from my florida trip with my girlfriend :D we went to disney, bush gardens, sea world, and universal.<br>
 						<b>taken throughout december 2023</b>
 					</div>
 				</div>
