--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -39,8 +39,8 @@
 				<div class="box">
 					<img src="!g/twin-peaks.png" class="cover">
 					<h3 id="twin peaks">twin peaks</h3>
-					<p>during april 2023 my boyfriend asked me if i wanted to either watch <i>twin peaks</i> or <i>the haunting of bly manor</i>.</p>
-					<p>i'm gonna get a tiny bit cheesy for a sec but then my boyfriend proceeded to explain to me the general plot of <i>twin peaks</i> and his face kinda lit up because it's one of his favorite TV shows so i went with <i>twin peaks</i></p>
+					<p>during april 2023 my girlfriend asked me if i wanted to either watch <i>twin peaks</i> or <i>the haunting of bly manor</i>.</p>
+					<p>i'm gonna get a tiny bit cheesy for a sec but then my girlfriend proceeded to explain to me the general plot of <i>twin peaks</i> and his face kinda lit up because it's one of his favorite TV shows so i went with <i>twin peaks</i></p>
 					<p>i find this show kind of insane tbh. there are some things that haven't aged all that well, but at least i get my giggle or two.</p>
 					<p>the main mystery of the show of <b>who killed laura palmer</b> was very interesting and i honestly did not see coming the finale of it. there's a lot more to this show than just the murder mystery with its supernatural? themes and that made it very fun to watch.</p>
 					<p>my favorite character is probably cooper... yes.... he's just so much fun and funny and silly... he's also my bf's favorite character as well. but another contender is probably josephine for being the most <b>BEAUTIFUL</b> woman i've ever seen in my entire life. jesus.</p>
