--- a/doqmeat/vgs/bloodborne/index.html
+++ b/doqmeat/vgs/bloodborne/index.html
@@ -11,8 +11,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script>
-		(function($) {
-			$(document).ready(function() {
+		(function ($) {
+			$(document).ready(function () {
 				$("[title]").style_my_tooltips({
 					tip_follows_cursor: true,
 					tip_delay_time: 10,
@@ -39,7 +39,7 @@
 
 		<h3>logs</h3>
 
-		<p><span class="date">08.jul.23</span>been playing bloodborne recently and YEAH its pretty scary (for someone like me) but it is so fun!!!!! i had given this game a try back when it was free for ps+ in 2018 and i did like it but every time i died i felt horrible so i stopped playing it LKFJDLj but since i got ps+ again i decided to give it a try once more. and i think this time it hit me. my boyfriend has also been helping me out giving me tips and tricks throught my journey YAY!<br>i have much more to write about this game but soon i will be publishing an in-depth blog post about bloodborne and my experience with it so please stay tuned for that!
+		<p><span class="date">08.jul.23</span>been playing bloodborne recently and YEAH its pretty scary (for someone like me) but it is so fun!!!!! i had given this game a try back when it was free for ps+ in 2018 and i did like it but every time i died i felt horrible so i stopped playing it LKFJDLj but since i got ps+ again i decided to give it a try once more. and i think this time it hit me. my girlfriend has also been helping me out giving me tips and tricks throught my journey YAY!<br>i have much more to write about this game but soon i will be publishing an in-depth blog post about bloodborne and my experience with it so please stay tuned for that!
 
 			<hr>
 		<p><span class="date">16.jul.23</span>wrote a blog post about my experience with bloodborne and anxiety. this game has helped me out with coming to come to terms with some things about myself and gave me a new perspective on my own struggles <img src="/!g/pix/cateepyy.gif"> if you'd like to read it you can do so <a href="/blog/2023/230716-bloodborne" target="_blank">here!</a>
