--- a/doqmeat/projects/learning-js/practice.html
+++ b/doqmeat/projects/learning-js/practice.html
@@ -33,6 +33,10 @@
 	<h1>thoughts and practice zone</h1>
 	<main>
 		<hr>
+		<p>in my compsci class we've been talking about operators like <code>and</code>, <code>or</code>, and <code>not</code> which helped me out a bit when making my <a href="/fashion">fashion</a> page's javascript! in this case i used the <code>or</code> which is written like this <code>||</code> in JS for an if statement so that the mobile/responsive view of the page could be as neat as possible. honestly it was pretty fun to figure that out and get it working. i really need to look more into what <a href="https://developer.mozilla.org/en-US/docs/Web/API/EventTarget" target="_blank">event targets</a> are though.</p>
+		<hr>
+		<p>the <a href="https://doqmeat.github.io/HTML-templates/yukika/script.js" target="_blank">javascript</a> for my yukika passport is SOO messy but it does work! i am SURE there's probably a whole other way of doing this but i haven't quite gotten there yet.</p>
+		<hr>
 		<p>figured out how to do a box pop up and a img modal of sorts! i put a class tag on all that imgs where if you click them then i take the <code>src</code> and <code>alt</code> text into the img modal. you can check it out on the scans page of my <a title="currently a WIP!" href="https://siinamota.doqmeat.com/scans/" target="_blank" class="outlink">siinamota fansite</a>. i also use a similar thing for the imgs on my <a href="/microblog">microblog</a> but with a different method.</p>
 		<p>also learning how to use this bit of code with the examples mentioned above <br><code>i = 0; i &lt; example.length; i++</code></p>
 
@@ -65,7 +69,7 @@
 	</main>
 
 	<footer>
-		last updated: <b>14.jul.24</b>
+		last updated: <b>18.oct.24</b>
 		<br>
 		....... ᓚᘏᗢ .......
 		<br>
