fixed descend link

--- a/doqmeat/music/songs/index.html
+++ b/doqmeat/music/songs/index.html
@@ -26,7 +26,7 @@
 	</div>
 	<main>
 		<h2>fav artists</h2>
-		<p>i enjoy the music they make a whole lot :) here are my favorite songs from them.</p>
+		<p>i enjoy the music they make a whole lot :) here are my favorite songs from each of them.</p>
 		<ul>
 			<li>yukika - <a href="https://www.youtube-nocookie.com/embed/67jSYCSrnE4?si=18CbQhWmEj9dipFg" target="player">neon</a> <a href="https://www.youtube-nocookie.com/embed/rK69AriTIZc?si=IbG8dIH1aST_Rebk" target="player">shade</a></li>
 
@@ -49,7 +49,7 @@
 
 			<li>drippin - <a href="https://www.youtube-nocookie.com/embed/hLy97A992FA?si=IUCNyAUgQOncmv93" target="player">switch</a> <a href="https://www.youtube-nocookie.com/embed/BdUCdh7ff9I?si=CjzX4H40H9ru9dix" target="player">nostalgia</a> <a href="https://www.youtube-nocookie.com/embed/XjkTVx9V5dE?si=3SFC5YoAND2q9Iy5" target="player">the one</a> <a href="https://www.youtube-nocookie.com/embed/pRTANHJxVis?si=lBmwlzktOlWlo2pm" target="player">utopia</a></li>
 
-			<li>toby fox - <a href="https://www.youtube-nocookie.com/embed/hMa4hZQbrms?si=ilbuUKziP-scKLew" target="player">asgore</a> <a href="https://www.youtube-nocookie.com/embed/xflkF-sqNaM?si=D-_0Rl4J6z-5EnnU" target="player">heartache</a> <a href="https://youtu.be/jyDdV8eIHGE?si=0hBHYusPVfZPV7SF" target="player">descend</a> <a href="https://www.youtube-nocookie.com/embed/OEB1uh0T9UA?si=TT1Cd1-NHVi3yTYf" target="player">umbral ultimatum</a> <a href="https://www.youtube-nocookie.com/embed/eUcThHVbrXY?si=vyMh6XqC23AKZTpE" target="player">your best nightmare</a></li>
+			<li>toby fox - <a href="https://www.youtube-nocookie.com/embed/hMa4hZQbrms?si=ilbuUKziP-scKLew" target="player">asgore</a> <a href="https://www.youtube-nocookie.com/embed/xflkF-sqNaM?si=D-_0Rl4J6z-5EnnU" target="player">heartache</a> <a href="https://www.youtube-nocookie.com/embed/jyDdV8eIHGE?si=TWjnYOsK1vc6S-uj" target="player">descend</a> <a href="https://www.youtube-nocookie.com/embed/OEB1uh0T9UA?si=TT1Cd1-NHVi3yTYf" target="player">umbral ultimatum</a> <a href="https://www.youtube-nocookie.com/embed/eUcThHVbrXY?si=vyMh6XqC23AKZTpE" target="player">your best nightmare</a></li>
 
 			<li>kinoue64 - <a href="https://www.youtube-nocookie.com/embed/kX9wf-6hV7M?si=dW76S5XyWuwacFH3" target="player">ずっと夢の中 (always in a dream)</a> <a href="https://www.youtube-nocookie.com/embed/29nzLUsgpbY?si=DOIAt5fGpYVTMeZX" target="player">亡霊(ghost)</a></li>
 
@@ -77,7 +77,7 @@
 		<p>i pretty much listen to anything with a good beat to it. some of these are more like categories instead of genres. :) also i might get some of these a little bit wrong. fair warning.</p>
 		<ul>
 			<li>kpop - <a href="https://www.youtube-nocookie.com/embed/hweoEpY5_lg?si=ZynIZYrAvleUt_nF" target="player">secret tape</a> <a href="https://www.youtube-nocookie.com/embed/IsHIH9ig-rU?si=XEEaown-vc5cYOdP" target="player">2 fast</a> <a href="https://www.youtube-nocookie.com/embed/enSvdtEutuw?si=iL6mp48iO1RjtlwY" target="player">glitch</a> <a href="https://www.youtube-nocookie.com/embed/oZ_p8yvDNJ0?si=eR9oRU6zIlBpWLsc" target="player">icarus</a></li>
-			<li>vocaloid - <a href="https://youtu.be/dSw8CucthGc?si=vrMgYnmEcUO-Em9O" target="player">meltdown</a> <a href="https://www.youtube-nocookie.com/embed/lw7pcm1W5tw?si=h3cpuaCBJxb9cAKB" target="player">non-breath oblige</a> <a href="https://www.youtube-nocookie.com/embed/HOz-9FzIDf0?si=XrggeniTukw3NkE1" target="player">matryoshka</a></li>
+			<li>vocaloid - <a href="https://youtu.be/dSw8CucthGc?si=vrMgYnmEcUO-Em9O" target="player">meltdown</a> <a href="https://www.youtube-nocookie.com/embed/lw7pcm1W5tw?si=h3cpuaCBJxb9cAKB" target="player">non-breath oblige</a> <a href="https://www.youtube-nocookie.com/embed/HOz-9FzIDf0?si=XrggeniTukw3NkE1" target="player">matryoshka</a> <a href="https://www.youtube-nocookie.com/embed/p9FJXfGHtDA?si=o17g4nFBS_PsYzzZ" target="player">villain</a></li>
 			<li>drum n bass - <a href="https://www.youtube-nocookie.com/embed/fZMsw0A7MKI?si=ZBnl5-qW5zG7N_z7" target="player">crawl space</a> <a href="https://www.youtube-nocookie.com/embed/ygI3MHCmgho?si=V8qq5mdfAax-C_vV" target="player">magic loop</a><a href="https://www.youtube-nocookie.com/embed/UjRs7NtbKHs?si=dV6VS5rY9C2XzXRd" target="player">salad days</a> <a href="https://www.youtube-nocookie.com/embed/ImFO_oAtD8Y?si=uRrW491UIXeIsZLU" target="player">yume no manimani</a> <a href="https://www.youtube-nocookie.com/embed/1FKqm23-S40?si=PdmOfEzFLeiEJulg" target="player">slice &amp; sway</a></li>
 			<li>ambient - <a href="https://www.youtube-nocookie.com/embed/qBfsAUFifOo?si=h_iLRmjV1kmWvrps" target="player">serenity</a> <a href="https://www.youtube-nocookie.com/embed/Pi0lTnlJHko?si=yPsmXTq_XHxWJQsn" target="player">post success depression</a> <a href="https://www.youtube-nocookie.com/embed/tC_lJyeGxoA?si=GsaXidsZEu6A2vWl" target="player">intro</a></li>
 			<li>jpop - <a href="https://www.youtube-nocookie.com/embed/QQI4T_pvQic?si=hIsQU4bg9Fj8iI_f" target="player">after pain</a> <a href="https://www.youtube-nocookie.com/embed/P5cI2Phbv8Y?si=VSOSAYCjEBxL56Ol" target="player">shibuyaK</a></li>
